[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/PlaylistEntry.gd" type="Script" id=1]

[node name="PlaylistEntry" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 0
mouse_default_cursor_shape = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoverImage" type="TextureRect" parent="."]
margin_right = 96.0
margin_bottom = 660.0
rect_min_size = Vector2( 96, 54 )
expand = true
stretch_mode = 5

[node name="Title" type="Label" parent="."]
margin_left = 100.0
margin_top = 319.0
margin_right = 576.0
margin_bottom = 341.0
size_flags_horizontal = 3
clip_text = true

[node name="RemoveButton" type="Button" parent="."]
margin_left = 580.0
margin_top = 317.0
margin_right = 600.0
margin_bottom = 343.0
mouse_default_cursor_shape = 2
size_flags_vertical = 4
text = "X"
flat = true

[connection signal="gui_input" from="." to="." method="_on_PlaylistEntry_gui_input"]
[connection signal="pressed" from="RemoveButton" to="." method="_on_RemoveButton_pressed"]
